--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       </ul>
     </main>
   </div>
-  <script src="./script.js"></script>
+  <script src="./script.js" type="module"></script>
 </body>
 
 </html>
